getChallengeResponse
