# src/types/ITestPromoUserApi.ts
@@ -1,4 +1,5 @@
 import { IPromo } from "../model/IPromo";
+import { IReponse } from "../model/IReponse";
 import { ITestPromoUser } from "../model/ITestPromoUser";
 import { IQuestionResponse } from "./IQuestionReponse";
 import { ITestApi } from "./ITestApi";
@@ -7,4 +8,5 @@ export interface ITestPromoUserApi extends ITestPromoUser {
     promo?: IPromo;
     test?: ITestApi;
     responses?: IQuestionResponse[];
+    reponsesBd?: IReponse[];
 } 
